bk_ida/gccida/g2/gen_call_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_call_value/src/insn-emit.c:14816:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_call_value/src/insn-emit.c:14816:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_call_value/src/insn-emit.c:14823:33: error: use of undeclared identifier 'machine_mode'
if ( !call_insn_operand( rtx, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)) ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_call_value/src/insn-emit.c:14825:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_call_value/src/insn-emit.c:14833:1: error: use of undeclared identifier 'v15'
v15 = emit_call_insn( v14); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_call_value/src/insn-emit.c:14834:17: error: expected expression
use_reg( ( rtx *)&v15[4], v12); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_call_value/src/insn-emit.c:14834:19: error: use of undeclared identifier 'v15'
use_reg( ( rtx *)&v15[4], v12); 
                  ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_call_value/src/obj/insn-emit.o] Error 1
